compiler/tests/success/slh/x86-64/protect_8.jazz
export
fn foo(reg u64 p) -> {
    #[nospill] reg u64 msf;
    msf = #init_msf();

    reg u8 x;
    x = 0;
    x = #protect_8(x, msf);

    [:u8 p] = x;
}
