compiler/tests/fail/slh/x86-64/no_msf.jazz
export
fn main(reg u64 x) {
    reg u64 msf;

    msf = 0;
    x = #protect(x, msf);
    [x] = 0;
}
